--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,6 @@
     "version": "1.0.0",
     "thumbnail": "store/Thumbnail.png",
     "id": "com_core447_Clocks",
-    "name": "Clocks"
+    "name": "Clocks",
+    "description": "Adds an analog and a digital clock."
 }
